@@ -1,3 +1,5 @@
+* Sanitize path in file_open against suffix (CVE-2017-0360)
+
 Version 4.2.2 - 2017-03-10
 * Bug fixes (see mercurial logs for details)
 
